# actng

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSIONING.md  package-lock.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  numerical-disagreement.yml
.github/workflows/: ci.yml  py-conformance.yml  r-conformance.yml
apps/server/: package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: README.md  publishing.md  workbench.md
docs/interop/: convention-map.md  mcp-notebook-recipe.md  reproducibility.md
docs/reviews/: cold-eyes-round4.md  cold-eyes-round5.md  cold-eyes-round6.md  cold-eyes-round7.md  cold-eyes-round8.md  cold-eyes-round9.md
docs/spec/: actuarial-interchange.md
examples/chain-ladder-crosscheck/: package.json
interop/conformance/: README.md  (+2 more)
interop/python/: README.md  pyproject.toml
interop/python/actuarial_interchange/: __init__.py  _jcs.py  bridge_result.py  bridge_selection.py  bridge_triangle.py  bundle.py  documents.py  errors.py
interop/python/actuarial_interchange.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
interop/python/examples/: author_demo_study.py
interop/python/tests/: conftest.py  test_bridge_result.py  test_bridge_selection.py  test_bridge_triangle.py  test_bundle.py  test_documents.py  test_jcs.py
interop/python/tests/fixtures/: ts-crosscheck-report.json  ts-study-no-extensions.json
tools/: app-launcher.mts
(+174 files in other folders)
